--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 header{
-margin: 0px;
+ margin-bottom: 200px;
+ /* background-image: url(/docs/Assets/Frame\ 27158.png); */
 }
 .Navbar-Section{
     display: flex;
     justify-content: space-between;
-    /* margin-top: 50px;
-    margin-bottom: 150px; */
+    margin: 50px;
     /* margin: 50px 0px 10px; */
 }
 .Navbar-Section img{
     height: 26px;
-    margin-left: 150px;
+    margin-left: 100px;
 }
 input[type="button"]{
-    margin-right: 150px;
+    margin-right: 100px;
     height: 35px;
     border: none;
     height: 48px;
@@ -29,8 +29,10 @@ input[type="button"]{
     width: 905px;
 }
 .banner-button{
-    margin-left: 600px;
+    margin-left: 570px;
     margin-top: 28px;
+    width: 174px;
+    height: 48px;
 }
 .bgc-color{
     border-radius: 5px;
@@ -49,7 +51,7 @@ input[type="button"]{
     font-weight: bold;
     color: #252432;
 }
-.action-description{
+.action-subtitle{
     font-size: 24px;
     color: #747381;
 }
@@ -61,9 +63,38 @@ input[type="button"]{
 .action-section{
     display: flex;
     justify-content: space-between;
-    margin: 0px 100px 0px 100px;
+    margin: 0px 100px 100px 100px;
     
 }
 .action-1{
     width: 500px;
+}
+.user-inter{
+    display: flex;
+    justify-content: space-around;
+
+}
+.Productive-User-Section{
+    text-align: center;
+    background-color: #4d4aec2c;
+    padding: 50px 80px;
+    margin: 110px;
+}
+.user-count {
+    justify-content: space-around;
+    color: #4E47FF;
+    font-weight: bold;
+    font-size: 80px;
+    width: 150px;
+    height: 95;  
+    text-align: center;
+    margin-bottom: 2px;
+    margin-top: 20px;
+  }
+  
+.inter-user{
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
 }
