--- a/style.css
+++ b/style.css
@@ -166,3 +166,41 @@ input[type="button"]{
     gap: 1px;
     margin-top: 1px;
 }
+.title-heading{
+    text-align: center;
+    font-weight: 700;
+    font-size: 42px;
+}
+.Feedback-Section{
+    display: flex;
+    justify-content: space-evenly;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+.Feedback-user{
+    gap: 20px;
+    padding: 20px;
+    background-color: #F2EDED;
+    border-radius: 14px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.fb-user-subtitle{
+    color: #1e1e1eb6;
+    font-size: 15px;
+}
+small{
+    color: #757575;
+    display: block;
+   
+    margin-left: 20px;
+}
+#Date{
+    color: #b3b3b3; 
+    gap: 20px;
+    margin-top: 5px;
+}
+.image-container{
+    display: flex;
+    margin-top: 10px;
+}
