--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
+/* FIRST TIME EVER DESIGN <> FIRST TIME EVER DESIGN BY "MD. REAZUL HASAN"
+
 header{
  margin-bottom: 200px;
- /* background-image: url(/docs/Assets/Frame\ 27158.png); */
-}
+ /* background-image: url(/docs/Assets/Frame\ 27158.png); }*/
 .logo-1-section{
      margin-left: 100px;
     border: none;
@@ -235,3 +236,4 @@ small{
     color: #000;
     height: 40px;
 }
+
